Implement animated login and registration forms with user authentication